fixing width on small screen

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body{
     height: 150px;
     border-radius: 3rem;
     background: #B6F406;
-    width: 360px;
+    width: 300px;
 }
 
 .dropzone-desc {
